--- a/web-clothes.html
+++ b/web-clothes.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="web-clothes.css">
 </head>
 <body>
-    <div class="logo">
-        <img src="logo.jpg" alt="logo">
-    </div>
     <div class="tab">
+        <div class="hotline">
+            <h4>Hotline:<span>0946253769</span></h4>
+        </div>
         <div class="search">
             <input type="search" placeholder="Tìm Kiếm...">
         </div>
@@ -25,6 +25,37 @@
             <input type="submit" value="Đăng Nhập">
         </div>
         <div class="list"></div>
+    </div>
+
+    <div class="logo">
+        <img src="logo.jpg" alt="logo">
+    </div>
+
+    <div class="tab1">
+        <div class="home">
+            <button type="submit"><a href="./web-clothes.html">Home</a></button>
+        </div>
+        <div class="clothings">
+            <select>
+                <option value="">All Items</option>
+                <option value="">Tee</option>
+                <option value="">Bottom</option>
+                <option value="">Jacket</option>
+                <option value="">Hoodie</option>
+                <option value="">Sweater</option>
+                <option value="">Cap</option>
+                <option value="">Shirt</option>
+                <option value="">Accessories</option>
+                <option value="">Wash/Tie Dye</option>
+                <option value="">Sale/option>
+            </select>
+        </div>
+        <div class="contact">
+            <button type="submit"><a href="./">Contact</a></button>
+        </div>
+        <div class="clearance_sale">
+            <button type="submit"><a href="./">Clearance Sale</a></button>
+        </div>
     </div>
 </body>
 </html>
