--- a/web-clothes.html
+++ b/web-clothes.html
@@ -33,28 +33,36 @@
 
     <div class="tab1">
         <div class="home">
-            <button type="submit"><a href="./web-clothes.html">Home</a></button>
+            <button type="submit"><a href="./web-clothes.html">Trang Chủ</a></button>
         </div>
         <div class="clothings">
             <select>
-                <option value="">All Items</option>
+                <option value="">Tất Cả Sản Phẩm</option>
                 <option value="">Tee</option>
                 <option value="">Bottom</option>
                 <option value="">Jacket</option>
                 <option value="">Hoodie</option>
                 <option value="">Sweater</option>
-                <option value="">Cap</option>
-                <option value="">Shirt</option>
-                <option value="">Accessories</option>
+                <option value="">Mũ</option>
+                <option value="">Áo</option>
+                <option value="">Phụ Kiện</option>
                 <option value="">Wash/Tie Dye</option>
                 <option value="">Sale/option>
             </select>
         </div>
         <div class="contact">
-            <button type="submit"><a href="./">Contact</a></button>
+            <button type="submit"><a href="./">Liên Hệ</a></button>
         </div>
         <div class="clearance_sale">
-            <button type="submit"><a href="./">Clearance Sale</a></button>
+            <button type="submit"><a href="./">Khuyến Mãi!</a></button>
+        </div>
+    </div>
+
+    <div class="tab2">
+        <div class="product">
+            <div class="image"></div>
+            <div class="name"></div>
+            <div class="price"></div>
         </div>
     </div>
 </body>
