--- a/web-clothes.html
+++ b/web-clothes.html
@@ -60,7 +60,9 @@
 
     <div class="tab2">
         <div class="product">
-            <div class="image"></div>
+            <div class="image">
+                <img src="/pro_1.png" alt="pro_1">
+            </div>
             <div class="name"></div>
             <div class="price"></div>
         </div>
