--- a/web-clothes.html
+++ b/web-clothes.html
@@ -22,7 +22,7 @@
             <input type="submit" value="Đăng Ký">
         </div>
         <div class="login">
-            <input type="submit" value="Đăng Nhập">
+            <button type="submit"><a href="/">Đăng Nhập</a></button>
         </div>
         <div class="list"></div>
     </div>
