--- a/web-clothes.html
+++ b/web-clothes.html
@@ -63,7 +63,9 @@
             <div class="image">
                 <img src="/pro_1.png" alt="pro_1">
             </div>
-            <div class="name"></div>
+            <div class="name">
+                <p>product 1</p>
+            </div>
             <div class="price"></div>
         </div>
     </div>
