--- a/web-clothes.html
+++ b/web-clothes.html
@@ -5,32 +5,139 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="web-clothes.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 <body>
     <nav class="nav">
         <img src="./Hình Pro/logo.jpg" width="128"/>
-        <ul class="nav-link">
-            <li>
-                <a href="#">home</a>
-            </li>
-            <li>
-                <a href="#">Abort</a>
-            </li>
-            <li>
-                <a href="#">Contact</a>
-            </li>
-            <li>
-                <a href="#">Buy</a>
-            </li>
-        </ul>
         <div class="search-box">
             <input type="text" name="search" class="input-search" placeholder="Search"/>
             <button>
                 <i class="bi bi-search"></i>
             </button>
         </div>
+        <ul class="nav-link">
+            <li>
+                <a href="#">Login</a>
+            </li>
+            <li>
+                <a href="#">Register</a>
+            </li>
+            <li>
+                <a href="#">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <nav class ="tab2">
+        <div class="tab2-title">
+            <ul class="title">
+                <li class="home">
+                    <a href="#">Home</a>
+                </li>
+                <li class = "list">
+                    <h2>Clothings</h2>
+                    <ul class = "dropdown">
+                        <li><a href="">All</a></li>
+                        <li><a href="">Clothings</a></li>
+                        <li><a href="">Contact</a></li>
+                        <li><a href="">Clearance_Sale</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="">Contact</a>
+                </li>
+                <li class="clearance">
+                    <a href="">Clearance_Sale</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <nav class ="tab3">
+        <h2></h2>
+    </nav>
+    <nav class="product">
+        <div class="product-list">
+            <div class="product-item">
+                <img src="./Hình Pro/pro_1.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 1</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./Hình Pro/pro_2.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 2</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./Hình Pro/pro_3.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 3</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./Hình Pro/pro_4.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 4</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./Hình Pro/pro_5.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 5</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./Hình Pro/pro_6.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 6</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./Hình Pro/pro_7.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 6</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 6</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./Hình Pro/pro_9.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 6</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./Hình Pro/pro_10.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 6</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
     </nav>
 </body>
 </html>
