--- a/web-clothes.html
+++ b/web-clothes.html
@@ -39,9 +39,15 @@
                     <h2>Clothings</h2>
                     <ul class = "dropdown">
                         <li><a href="">All</a></li>
-                        <li><a href="">Clothings</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="">Clearance_Sale</a></li>
+                        <li><a href="">Tee</a></li>
+                        <li><a href="">Bottom</a></li>
+                        <li><a href="">Hoodie</a></li>
+                        <li><a href="">Sweater</a></li>
+                        <li><a href="">Jacket</a></li>
+                        <li><a href="">Cap</a></li>
+                        <li><a href="">Shirt</a></li>
+                        <li><a href="">Accessories</a></li>
+                        <li><a href="">Jacket</a></li>
                     </ul>
                 </li>
                 <li>
@@ -109,7 +115,7 @@
             <div class="product-item">
                 <img src="./Hình Pro/pro_7.jpg" width="100%"/>
                 <div class="product-item-info">
-                    <h3>Product 6</h3>
+                    <h3>Product 7</h3>
                     <p>Price: 100$</p>
                     <button>Add to cart</button>
                 </div>
@@ -117,27 +123,110 @@
             <div class="product-item">
                 <img src="./Hình Pro/pro_8.jpg" width="100%"/>
                 <div class="product-item-info">
-                    <h3>Product 6</h3>
+                    <h3>Product 8</h3>
                     <p>Price: 100$</p>
                     <button>Add to cart</button>
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_9.jpg" width="100%"/>
+                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
                 <div class="product-item-info">
-                    <h3>Product 6</h3>
+                    <h3>Product 8</h3>
                     <p>Price: 100$</p>
                     <button>Add to cart</button>
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_10.jpg" width="100%"/>
+                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
                 <div class="product-item-info">
-                    <h3>Product 6</h3>
+                    <h3>Product 8</h3>
                     <p>Price: 100$</p>
                     <button>Add to cart</button>
                 </div>
             </div>
+            <div class="product-item">
+                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 8</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 8</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 8</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 8</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 8</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 8</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 8</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 8</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 8</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <div class="product-item-info">
+                    <h3>Product 8</h3>
+                    <p>Price: 100$</p>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+    </nav>
+    <nav class = "see-all">
+        <button type="submit"><a href="#">See All</a></button>
     </nav>
 </body>
 </html>
