--- a/web-clothes.html
+++ b/web-clothes.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Co_Chay</title>
     <link rel="stylesheet" href="web-clothes.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <script src="https://kit.fontawesome.com/0ab0c4b239.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="nav">
-        <img src="./Hình Pro/logo.jpg" width="128"/>
+        <a href="./web-clothes.html"><img src="./Hình Pro/logo.jpg" width="128"/></a>
         <div class="search-box">
             <input type="text" name="search" class="input-search" placeholder="Search"/>
             <button>
@@ -129,7 +130,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <img src="./Hình Pro/pro_9.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -137,7 +138,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <img src="./Hình Pro/pro_10.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -145,7 +146,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <img src="./Hình Pro/pro_11.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -153,7 +154,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <img src="./Hình Pro/pro_12.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -161,7 +162,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <img src="./Hình Pro/pro_13.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -169,7 +170,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <img src="./Hình Pro/pro_14.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -177,7 +178,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <img src="./Hình Pro/pro_15.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -185,7 +186,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <img src="./Hình Pro/pro_16.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -193,7 +194,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <img src="./Hình Pro/pro_17.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -201,7 +202,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <img src="./Hình Pro/pro_18.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -209,7 +210,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <img src="./Hình Pro/pro_19.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -217,7 +218,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <img src="./Hình Pro/pro_20.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -227,6 +228,19 @@
     </nav>
     <nav class = "see-all">
         <button type="submit"><a href="#">See All</a></button>
+    </nav>
+    <nav class ="footer">
+        <div class="footer-title">
+            <div class="social">
+                <h2>Liên Hệ</h2>
+                <div class="icon">
+                    
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+            </div>
+            <div class="help"></div>
+            <div class="contact_us"></div>
+        </div>
     </nav>
 </body>
 </html>
