--- a/web-clothes.html
+++ b/web-clothes.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="web-clothes.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <script src="https://kit.fontawesome.com/0ab0c4b239.js" crossorigin="anonymous"></script>
+    <link href="./themify-icons/themify-icons.css" rel="stylesheet">
+    <script src="./web-clothes.js"></script>
 </head>
 <body>
     <nav class="nav">
@@ -234,7 +236,7 @@
             <div class="social">
                 <h2>Theo Dõi Chúng Tôi</h2>
                 <div class="icon">
-                    <a href="#"></a>
+                    <a href="ti-facebook"></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </div>
@@ -256,7 +258,8 @@
                 <ul class="de-muc">
                     <li><a href="">Địa Chỉ: <span style="font-weight: bold;">123 Nguyễn Văn Linh, Quận 7, TP.HCM</span></a></li>
                     <li><a href="">Điện Thoại: <span style="font-weight: bold;">0946253769</span></a></li>
-                    <li><a href="">Email: <span style="font-weight: bold;">tranbaohoang70@gmail.com</span>
+                    <li><div href="">Email: <span style="font-weight: bold;">tranbaohoang70@gmail.com</span>
+            </div>
         </div>
     </nav>
 </body>
