--- a/web-clothes.html
+++ b/web-clothes.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav class="nav">
-        <a href="./web-clothes.html"><img src="./Hình Pro/logo.jpg" width="128"/></a>
+        <a href="./web-clothes.html"><img src="./hinh-pro/logo.jpg" width="128"/></a>
         <div class="search-box">
             <input type="text" name="search" class="input-search" placeholder="Search"/>
             <button>
@@ -68,7 +68,7 @@
     <nav class="product">
         <div class="product-list">
             <div class="product-item">
-                <img src="./Hình Pro/pro_1.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_1.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 1</h3>
                     <p>Price: 100$</p>
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_2.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_2.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 2</h3>
                     <p>Price: 100$</p>
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_3.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_3.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 3</h3>
                     <p>Price: 100$</p>
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_4.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_4.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 4</h3>
                     <p>Price: 100$</p>
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_5.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_5.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 5</h3>
                     <p>Price: 100$</p>
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_6.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_6.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 6</h3>
                     <p>Price: 100$</p>
@@ -116,7 +116,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_7.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_7.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 7</h3>
                     <p>Price: 100$</p>
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_8.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_8.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_9.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_9.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -140,7 +140,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_10.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_10.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -148,7 +148,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_11.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_11.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -156,7 +156,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_12.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_12.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -164,7 +164,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_13.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_13.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -172,7 +172,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_14.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_14.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -180,7 +180,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_15.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_15.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -188,7 +188,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_16.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_16.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -196,7 +196,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_17.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_17.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -204,7 +204,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_18.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_18.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -212,7 +212,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_19.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_19.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -220,7 +220,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./Hình Pro/pro_20.jpg" width="100%"/>
+                <img src="./hinh-pro/pro_20.jpg" width="100%"/>
                 <div class="product-item-info">
                     <h3>Product 8</h3>
                     <p>Price: 100$</p>
@@ -258,7 +258,8 @@
                 <ul class="de-muc">
                     <li><a href="">Địa Chỉ: <span style="font-weight: bold;">123 Nguyễn Văn Linh, Quận 7, TP.HCM</span></a></li>
                     <li><a href="">Điện Thoại: <span style="font-weight: bold;">0946253769</span></a></li>
-                    <li><div href="">Email: <span style="font-weight: bold;">tranbaohoang70@gmail.com</span>
+                    <li><a href="">Email: <span style="font-weight: bold;">tranbaohoang70@gmail.com</span></a></li>
+                </ul>
             </div>
         </div>
     </nav>
