--- a/web-clothes.html
+++ b/web-clothes.html
@@ -22,7 +22,7 @@
         </div>
         <ul class="nav-link">
             <li>
-                <a href="#">Login</a>
+                <a href="login.html">Login</a>
             </li>
             <li>
                 <a href="#">Register</a>
