--- a/html/dieu_khoan.html
+++ b/html/dieu_khoan.html
@@ -1,10 +1,22 @@
-﻿
-@{
-    ViewBag.Title = "dieu_khoan_view";
-    Layout = "~/Views/Home/dieu_khoan.cshtml";
-}
+﻿<!DOCTYPE html>
 
-<nav class="nav">
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>@ViewBag.Title</title>
+    @Styles.Render("~/Content/web_clothes.css")
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <script src="https://kit.fontawesome.com/0ab0c4b239.js" crossorigin="anonymous"></script>
+    <script src="./web-clothes.js"></script>
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+</head>
+<body>
+    <div>
+        <nav class="nav">
     <img src="~/Content/hinh-pro/logo.jpg" width="128" />
     <div class="search-box">
         <input type="text" name="search" class="input-search" placeholder="Search" />
@@ -146,4 +158,6 @@
         </div>
     </div>
 </nav>
-
+    </div>
+</body>
+</html>
