--- a/html/web-clothes.html
+++ b/html/web-clothes.html
@@ -1,11 +1,23 @@
-﻿
-@{
-    ViewBag.Title = "web_clothes_view";
-    Layout = "~/Views/Home/web-clothes.cshtml";
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title</title>
+    @Styles.Render("~/Content/web_clothes.css")
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <script src="https://kit.fontawesome.com/0ab0c4b239.js" crossorigin="anonymous"></script>
+    <script src="./web-clothes.js"></script>
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
 
-
-<nav class="nav">
+</head>
+<body>
+      <nav class="nav">
     
     <div class="search-box">
         <input type="text" name="search" class="input-search" placeholder="Search" />
@@ -259,5 +271,5 @@
         </div>
     </div>
 </nav>
-
-
+</body>
+</html>
