--- a/html-main/giao_dien_chinh.html
+++ b/html-main/giao_dien_chinh.html
@@ -251,9 +251,9 @@
         <div class="help">
             <h2>Hướng Dẫn</h2>
             <ul class="de-muc">
-                <li>@Html.ActionLink("Điều Khoản", "dieu_khoan_view","Home")</li>
-                <li>@Html.ActionLink("Hướng Dẫn Mua Hàng","huong_dan_mua_hang_view","Home")</li>
-                <li>@Html.ActionLink("Chính Sách Đổi Trả Hàng", "chinh_sach_doi_tra_view","Home")</li>
+                <li><a href="./dieu_khoan.html">Điều Khoản</a></li>
+                <li><a href="./huong_dan_mua_hang.html">Hướng Dẫn Mua Hàng</a></li>
+                <li><a href="./chinh_sach_doi_tra.html">Chính Sách Đổi Trả</a></li>
                 <li><a href="">Bảo Mật Thông Tin Khách Hàng</a></li>
                 <li><a href="">Chính Sách Thanh Toán</a></li>
             </ul>
