--- a/html-main/giao_dien_chinh.html
+++ b/html-main/giao_dien_chinh.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/web_clothes.css")
+    <link rel="stylesheet" href="">
+    <script src="web_clothes.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <script src="https://kit.fontawesome.com/0ab0c4b239.js" crossorigin="anonymous"></script>
     <script src="./web-clothes.js"></script>
@@ -17,7 +18,7 @@
 
 </head>
 <body>
-      <nav class="nav">
+<nav class="nav">
     
     <div class="search-box">
         <input type="text" name="search" class="input-search" placeholder="Search" />
@@ -73,7 +74,7 @@
 <nav class="product">
     <div class="product-list">
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_1.jpg" />
+            <img src="pro_1.jpg" />
             <div class="product-item-info">
                 <h3>Product 1</h3>
                 <p>Price: 100$</p>
