--- a/html-cac_dieu_khoan/dieu_khoan.html
+++ b/html-cac_dieu_khoan/dieu_khoan.html
@@ -4,7 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/web_clothes.css")
+    <link rel="stylesheet" href="web_clothes.css">
+    <script src="web_clothes.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <script src="https://kit.fontawesome.com/0ab0c4b239.js" crossorigin="anonymous"></script>
     <script src="./web-clothes.js"></script>
