--- a/html-cac_dieu_khoan/huong_dan_mua_hang.html
+++ b/html-cac_dieu_khoan/huong_dan_mua_hang.html
@@ -10,7 +10,8 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
-    @Styles.Render("~/Content/web_clothes.css")
+    <link rel="stylesheet" href="web_clothes.css">
+    <script src="web_clothes.js"></script>
 </head>
 <body>
     <div>
