--- a/html-main/tat_ca.html
+++ b/html-main/tat_ca.html
@@ -4,8 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/web_clothes.css")
-    @Scripts.Render("~/Scripts/web_clothes.js")
+    <link rel="stylesheet" href="web_clothes.css">
+    <script src="web_clothes.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <script src="https://kit.fontawesome.com/0ab0c4b239.js" crossorigin="anonymous"></script>
 </head>
