--- a/html-main/giao_dien_chinh.html
+++ b/html-main/giao_dien_chinh.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title</title>
-    <link rel="stylesheet" href="">
+    <title>Document</title>
+    <link rel="stylesheet" href="web_clothes.css">
     <script src="web_clothes.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <script src="https://kit.fontawesome.com/0ab0c4b239.js" crossorigin="anonymous"></script>
@@ -19,7 +19,7 @@
 </head>
 <body>
 <nav class="nav">
-    
+    <a href="./giao_dien_chinh.html"><img src="logo.jpg"/></a>
     <div class="search-box">
         <input type="text" name="search" class="input-search" placeholder="Search" />
         <button>
@@ -42,7 +42,7 @@
     <div class="tab2-title">
         <ul class="title">
             <li class="home">
-                @Html.ActionLink("Home", "web_clothes_view","Home",null, new {@class= "linkbtnfull" })
+                <a href="./giao_dien_chinh.html">Home</a>
             </li>
             <li class="list">
                 <h2>Clothings</h2>
