--- a/html-main/giao_dien_chinh.html
+++ b/html-main/giao_dien_chinh.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <nav class="nav">
-    <a href="./giao_dien_chinh.html"><img src="logo.jpg"/></a>
+    <a href="./giao_dien_chinh.html"><img src="./hinh-pro/logo.jpg"/></a>
     <div class="search-box">
         <input type="text" name="search" class="input-search" placeholder="Search" />
         <button>
@@ -74,7 +74,7 @@
 <nav class="product">
     <div class="product-list">
         <div class="product-item">
-            <img src="pro_1.jpg" />
+            <img src="./hinh-pro/pro_1.jpg" />
             <div class="product-item-info">
                 <h3>Product 1</h3>
                 <p>Price: 100$</p>
@@ -82,7 +82,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_2.jpg" width="100" />
+            <img src="./hinh-pro/pro_2.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 2</h3>
                 <p>Price: 100$</p>
@@ -90,7 +90,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_3.jpg" width="100" />
+            <img src="./hinh-pro//pro_3.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 3</h3>
                 <p>Price: 100$</p>
@@ -98,7 +98,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_4.jpg" width="100" />
+            <img src="./hinh-pro/pro_4.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 4</h3>
                 <p>Price: 100$</p>
@@ -106,7 +106,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_5.jpg" width="100" />
+            <img src="./hinh-pro/pro_5.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 5</h3>
                 <p>Price: 100$</p>
@@ -114,7 +114,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_6.jpg" width="100" />
+            <img src="./hinh-pro/pro_6.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 6</h3>
                 <p>Price: 100$</p>
@@ -122,7 +122,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_7.jpg" width="100" />
+            <img src="./hinh-pro/pro_7.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 7</h3>
                 <p>Price: 100$</p>
@@ -130,7 +130,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_8.jpg" width="100" />
+            <img src="./hinh-pro/pro_8.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 8</h3>
                 <p>Price: 100$</p>
@@ -138,7 +138,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_9.jpg" width="100" />
+            <img src="./hinh-pro/pro_9.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 9</h3>
                 <p>Price: 100$</p>
@@ -146,7 +146,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_10.jpg" width="100" />
+            <img src="./hinh-pro/pro_10.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 10</h3>
                 <p>Price: 100$</p>
@@ -154,7 +154,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_11.jpg" width="100" />
+            <img src="./hinh-pro/pro_11.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 11</h3>
                 <p>Price: 100$</p>
@@ -162,7 +162,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_12.jpg" width="100" />
+            <img src="./hinh-pro/pro_12.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 12</h3>
                 <p>Price: 100$</p>
@@ -170,7 +170,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_13.jpg" width="100" />
+            <img src="./hinh-pro/pro_13.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 13</h3>
                 <p>Price: 100$</p>
@@ -178,7 +178,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_14.jpg" width="100" />
+            <img src="./hinh-pro/pro_14.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 14</h3>
                 <p>Price: 100$</p>
@@ -186,7 +186,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_15.jpg" width="100" />
+            <img src="./hinh-pro/pro_15.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 15</h3>
                 <p>Price: 100$</p>
@@ -194,7 +194,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_16.jpg" width="100" />
+            <img src="./hinh-pro/pro_16.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 16</h3>
                 <p>Price: 100$</p>
@@ -202,7 +202,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_17.jpg" width="100" />
+            <img src="./hinh-pro/pro_17.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 17</h3>
                 <p>Price: 100$</p>
@@ -210,7 +210,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_18.jpg" width="100" />
+            <img src="./hinh-pro/pro_18.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 18</h3>
                 <p>Price: 100$</p>
@@ -218,7 +218,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_19.jpg" width="100" />
+            <img src="./hinh-pro/pro_19.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 19</h3>
                 <p>Price: 100$</p>
@@ -226,7 +226,7 @@
             </div>
         </div>
         <div class="product-item">
-            <img src="~/Content/hinh-pro/pro_20.jpg" width="100" />
+            <img src="./hinh-pro/pro_20.jpg" width="100" />
             <div class="product-item-info">
                 <h3>Product 20</h3>
                 <p>Price: 100$</p>
