--- a/html-main/dang_nhap.html
+++ b/html-main/dang_nhap.html
@@ -6,33 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng Nhập</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="./css/login.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <script src="https://kit.fontawesome.com/0ab0c4b239.js" crossorigin="anonymous"></script>
     <link href="./themify-icons/themify-icons.css" rel="stylesheet">
     <script src="./web-clothes.js"></script>
 </head>
 
-<body background="./img/bglogin.jpg">
+<body>
     <nav class="nav">
-        <a href="./web-clothes.html"><img src="./img/logo.jpg" width="128" /></a>
+        <a href="./web-clothes.html"><img src="./hinh-pro/logo.jpg" width="128" /></a>
     </nav>
     <nav class="logins">
-
         <div>
             <form action="">
                 <label class="login_account" for="account">Tên Tài Khoản: </label><br>
-                <input class="login_account" type="text" id="account" name="accpunt"><br>
-                <label class="login_account" for="password">Mật Khẩu: </label><br>
-                <input type="password" id="passwd" name="passwd"><br>
+
+                <input class="login_account" type="text" id="account" name="account"><br>
+
+                <label class="password" for="password">Mật Khẩu: </label><br>
+
+                <input type="password" class="password" name="password" id="psw"><br>
+
                 <form action="reg.hmtl">
-                    <button class="loginbutton" type="submit" >Đăng Kí</button>
+                    <button class="login_button" type="submit" >Đăng Kí</button>
                 </form>
-                <form action="quenmk.hmtl">
-                    <button class="loginbutton" type="submit" >Quên Mật Khẩu</button>
-                </form>
-                <button class="loginbutton" href="web-clothes.html" type="submit" >Đăng Nhập</button>
-                </form>
+                <div action="quenmk.hmtl">
+                    <button class="login_button" type="submit" >Quên Mật Khẩu</button>
+                </div>
+                <button class="login_button" href="web-clothes.html" type="submit" >Đăng Nhập</button>
+            </form>
         </div>
     </nav>
     <nav class="footer">
@@ -40,12 +43,10 @@
             <div class="social">
                 <h2>Theo Dõi Chúng Tôi</h2>
                 <div class="icon">
-                    <a href="ti-facebook"></a>
+                    <a href="https://www.facebook.com/hoangtran1609"><i class="fa-brands fa-facebook"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </div>
-            <div class="help"></div>
-            <div class="contact_us"></div>
     
             <div class="help">
                 <h2>Hướng Dẫn</h2>
@@ -64,6 +65,9 @@
                     <li><a href="">Điện Thoại: <span style="font-weight: bold;">0946253769</span></a></li>
                     <li><a href="">Email: <span style="font-weight: bold;">tranbaohoang70@gmail.com</span></a></li>
                 </ul>
+            </div>
+            <div class="reserved">
+                <h4>Co_Chay® All Right Reserved</h4>
             </div>
         </div>
     </nav>
