--- a/html-main/giao_dien_chinh.html
+++ b/html-main/giao_dien_chinh.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="web_clothes.css">
+    <link rel="stylesheet" href="./css/web_clothes.css">
     <script src="web_clothes.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <script src="https://kit.fontawesome.com/0ab0c4b239.js" crossorigin="anonymous"></script>
@@ -28,7 +28,7 @@
     </div>
     <ul class="nav-link">
         <li>
-            <a href="#">Login</a>
+            <a href="./dang_nhap.html">Login</a>
         </li>
         <li>
             <a href="#">Register</a>
