--- a/html-main/dangki.html
+++ b/html-main/dangki.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng Nhập</title>
-    <link rel="stylesheet" href="./css/login.css">
+    <title>Đăng Kí</title>
+    <link rel="stylesheet" href="./css/regist.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <script src="https://kit.fontawesome.com/0ab0c4b239.js" crossorigin="anonymous"></script>
     <link href="./themify-icons/themify-icons.css" rel="stylesheet">
@@ -17,23 +17,26 @@
     <nav class="nav">
         <a href="./giao_dien_chinh.html"><img src="./hinh-pro/logo.jpg" width="128" /></a>
     </nav>
-    <nav class="logins">
+    <nav class="regist">
         <div>
-            <form action="https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_form_action">
-                <label class="login_account" for="account">Tên Tài Khoản: </label><br>
-
-                <input class="login_account" type="text" id="account" name="account"><br>
-
-                <label class="password" for="password">Mật Khẩu: </label><br>
-
-                <input type="password" class="password" name="password" id="psw"><br>
-                                
-                <button class="login_button" href="web-clothes.html" type="submit" >Đăng Nhập</button>
-            </form>
-            <button class="login_button" type="submit" ><a href="#">Đăng Kí</a></button>
-                
-            <button class="login_button" type="submit" >Quên Mật Khẩu</button>
+            <label for="acccountname" id="accname">Tên tài khoản</label>
+            <br>
+            <input type="text" id="acccname" placeholder="Tên tài khoản">
+            <br>
+            <label for="accccountname" id="accemail">Email</label>
+            <br>
+            <input type="email" id="accemail" placeholder="Email">
+            <br>
+            <label for="number" id="phonenum">Số điện thoại</label>
+            <br>
+            <input type="tel" id="phonennum" placeholder="Số điện thoại">
+            <br>
+            <label for="birth" id="birthday">Tuổi</label>
+            <br>
+            <input type="date" id="birthday">
+            <br>
         </div>
+
     </nav>
     <nav class="footer">
         <div class="footer-title">
